--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-<<<<<<< HEAD
-  image_picker: ^1.1.2 # so the user can add a profile picture in their profile 
+  image_picker: ^1.1.2 
   google_fonts: ^6.2.1
   delightful_toast: ^1.1.0
   get_it: ^8.0.0
-=======
   firebase_core: ^3.6.0
->>>>>>> 489ce5542e7122c7784ec402e34bae1465310eee
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
