--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   delightful_toast: ^1.1.0
   get_it: ^8.0.0
   firebase_core: ^3.6.0
+  firebase_storage: ^12.3.4
+  firebase_auth: ^5.3.1 
+  cloud_firestore: ^5.4.4 
   
 dev_dependencies:
   flutter_test:
