--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,13 @@ dependencies:
   google_fonts: ^6.2.1
   delightful_toast: ^1.1.0
   get_it: ^8.0.0
+
+  #fire base dependencies
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.4
   firebase_auth: ^5.3.1 
   cloud_firestore: ^5.4.4 
+  firebase_app_check: ^0.3.1+4
   
 dev_dependencies:
   flutter_test:
