--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+
   assets:
     - assets/book.png
     - assets/book2.png
@@ -40,4 +41,8 @@ flutter:
     - assets/crime_fiction.png
     - assets/adventure.png
     - assets/h.png
-    
+    - assets/hunter.png
+    - assets/cat.png
+    - assets/catm.png
+
+
