--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_auth: ^5.3.1 
   cloud_firestore: ^5.4.4 
   firebase_app_check: ^0.3.1+4
+  firebase_database: ^11.1.4
   
 dev_dependencies:
   flutter_test:
