--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,10 @@ buildscript {
     }
   dependencies {
     // ... other dependencies
-    classpath 'com.google.gms:google-services:4.3.8'
+ classpath 'com.google.gms:google-services:4.3.8' 
+
+
+// 'com.google.gms:google-services:4.3.8' -- Refal
   }
 }
 
