--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,5 @@
+
+
 name: rawae_gp24
 description: "A new Flutter project."
 publish_to: 'none'
@@ -27,6 +29,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+
+
+fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+
 
 flutter:
   uses-material-design: true
