--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,7 +3,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.java.home=/opt/homebrew/opt/openjdk@17
 
-#org.gradle.java.home=C:/Program Files/Java/jdk-17.0.12 حق احد مدري
+# org.gradle.java.home=C:/Program Files/Java/jdk-17.0.12 Jory
+
+
 
 
 # org.gradle.java.home=/opt/homebrew/opt/openjdk@17 --- Refal
