--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_app_check: ^0.3.1+4
   firebase_database: ^11.1.4
   image_picker: ^1.1.2
+  firebase_messaging: 15.1.3
 
   
 dev_dependencies:
