--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_database: ^11.1.4
   image_picker: ^1.1.2
   firebase_messaging: 15.1.3
+  http: ^1.2.2
 
   
 dev_dependencies:
