"Updated AndroidManifest.xml, gradle.properties, and various Dart files; added cached_network_image dependency and sqflite_darwin plugin; modified WritingPage and CharacterPreviewPage logic."

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.example.rawae_gp24">
+ <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:usesCleartextTraffic="true"
         android:label="rawae_gp24"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
