--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_messaging: 15.1.3
   http: ^1.2.2
-
+  cached_network_image: ^3.4.1
   
 dev_dependencies:
   flutter_test:
