--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_messaging: 15.1.3
   http: ^1.2.2
   cached_network_image: ^3.4.1
+
+  dcdg: ^4.1.0 # this to generate the class diagram
   
   
 dev_dependencies:
