--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -8,4 +8,4 @@ android.enableJetifier=true
 
 # org.gradle.java.home=/opt/homebrew/opt/openjdk@17 --- Refal
  
-org.gradle.java.home=C:/Program Files/Java/jdk-17.0.12
+org.gradle.java.home=/opt/homebrew/opt/openjdk@17
