--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   delightful_toast: ^1.1.0
   get_it: ^8.0.0
   flutter_rating_bar: ^4.0.0
+  introduction_screen: ^3.1.17
+  tutorial_coach_mark: ^1.2.8
   
   
 
